--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="container">
                 <h2 class="title">My Works</h2>
                 <div class="row">
-                  <div class="col-xl-3">
+                  <div class="col-xl-3 work__left">
                     <div class="list-group section__work-list" id="list-tab" role="tablist">
                       <a class="list-group-item list-group-item-action section__work-link active" id="list-nike-list" data-bs-toggle="list" href="#list-nike" role="tab" aria-controls="list-home">NIKE</a>
                       <a class="list-group-item list-group-item-action section__work-link" id="list-tnw-list" data-bs-toggle="list" href="#list-tnw" role="tab" aria-controls="list-home">TNW</a>
@@ -180,7 +180,7 @@
                       <a class="list-group-item list-group-item-action section__work-link" id="list-vue-list" data-bs-toggle="list" href="#list-vue" role="tab" aria-controls="list-home">Vue Cinemas</a>
                     </div>
                   </div>
-                  <div class="col-xl-9">
+                  <div class="col-xl-9 work__right">
                     <div class="tab-content" id="nav-tabContent">
                       <div class="tab-pane section__work-pane fade show active" id="list-nike" role="tabpanel" aria-labelledby="list-nike-list">
                           <div class="row">
@@ -195,7 +195,7 @@
                                   <p class="section__work-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci, mauris neque, gravida amet diam cum nisl enim. Vestibulum, risus, maecenas et nisi lobortis malesuada vel. Neque, sem tellus sed a, enim egestas. Mi mi id amet, lorem vitae lectus risus diam </p>
                                   <p class="section__work-text">
                                     nunc. Eget nunc eget lectus amet feugiat lobortis sit sit non eu. Nunc, mauris viverra quis sapien quam. Non parturient sed </p>
-                                    <a href="#!" class="btn-all section__work-btn">details</a>
+                                    <a href="https://proweb1987.github.io/nike/" target="_blank" class="btn-all section__work-btn">details</a>
                                 </div>
                             </div>
                           </div>
@@ -213,7 +213,7 @@
                                   <p class="section__work-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci, mauris neque, gravida amet diam cum nisl enim. Vestibulum, risus, maecenas et nisi lobortis malesuada vel. Neque, sem tellus sed a, enim egestas. Mi mi id amet, lorem vitae lectus risus diam </p>
                                   <p class="section__work-text">
                                     nunc. Eget nunc eget lectus amet feugiat lobortis sit sit non eu. Nunc, mauris viverra quis sapien quam. Non parturient sed </p>
-                                    <a href="#!" class="btn-all section__work-btn">details</a>
+                                    <a href="https://proweb1987.github.io/news" target="_blank" class="btn-all section__work-btn">details</a>
                                 </div>
                             </div>
                           </div>
@@ -249,7 +249,7 @@
                                   <p class="section__work-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci, mauris neque, gravida amet diam cum nisl enim. Vestibulum, risus, maecenas et nisi lobortis malesuada vel. Neque, sem tellus sed a, enim egestas. Mi mi id amet, lorem vitae lectus risus diam </p>
                                   <p class="section__work-text">
                                     nunc. Eget nunc eget lectus amet feugiat lobortis sit sit non eu. Nunc, mauris viverra quis sapien quam. Non parturient sed </p>
-                                    <a href="#!" class="btn-all section__work-btn">details</a>
+                                    <a href="https://proweb1987.github.io/airpods-pro/" target="_blank" class="btn-all section__work-btn">details</a>
                                 </div>
                             </div>
                           </div>
@@ -267,7 +267,7 @@
                                   <p class="section__work-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Orci, mauris neque, gravida amet diam cum nisl enim. Vestibulum, risus, maecenas et nisi lobortis malesuada vel. Neque, sem tellus sed a, enim egestas. Mi mi id amet, lorem vitae lectus risus diam </p>
                                   <p class="section__work-text">
                                     nunc. Eget nunc eget lectus amet feugiat lobortis sit sit non eu. Nunc, mauris viverra quis sapien quam. Non parturient sed </p>
-                                    <a href="#!" class="btn-all section__work-btn">details</a>
+                                    <a href="https://proweb1987.github.io/burger/" target="_blank" class="btn-all section__work-btn">details</a>
                                 </div>
                             </div>
                           </div>
@@ -297,6 +297,21 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+    <div class="container">
+      <img src="images/logo-light.png" alt="" class="footer__img ms-auto">
+      <ul class="footer__ul d-flex justify-content-end">
+        <li><a href="#!" class="footer__btn">about Me</a></li>
+        <li><a href="#!" class="footer__btn">Works</a></li>
+        <li><a href="#!" class="footer__btn">Contacts</a></li>
+      </ul>
+      <ul class="footer__ul d-flex justify-content-end">
+        <li><a href="tel:44444444" class="footer__btn">(239) 555-0108</a></li>
+        <li><a href="#!" class="footer__btn">Ronald Richards@gmail.com</a></li>
+      </ul>
+    </div>
+    </footer>
+       
 
     
 
